restructuring the logic

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "hypermerge": "git://github.com/frnsys/hypermerge.git#fix-hypercore-crypto",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-markdown": "^3.3.4"
+    "react-markdown": "^3.3.4",
+    "react-select": "^2.0.0"
   }
 }
